A3/pathfinder/log/build_2025-04-24_14-00-18/drive/stdout_stderr.log
running egg_info
creating ../../build/drive/drive.egg-info
writing ../../build/drive/drive.egg-info/PKG-INFO
writing dependency_links to ../../build/drive/drive.egg-info/dependency_links.txt
writing entry points to ../../build/drive/drive.egg-info/entry_points.txt
writing requirements to ../../build/drive/drive.egg-info/requires.txt
writing top-level names to ../../build/drive/drive.egg-info/top_level.txt
writing manifest file '../../build/drive/drive.egg-info/SOURCES.txt'
reading manifest file '../../build/drive/drive.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/drive/drive.egg-info/SOURCES.txt'
running build
running build_py
creating /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build
creating /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib
creating /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib/drive
copying drive/__init__.py -> /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib/drive
copying drive/driver.py -> /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib/drive
running install
running install_lib
creating /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive
copying /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib/drive/__init__.py -> /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive
copying /home/jestin/SegFaultExp/A3/pathfinder/build/drive/build/lib/drive/driver.py -> /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive
byte-compiling /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive/driver.py to driver.cpython-310.pyc
  File "/home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive/driver.py", line 13
    self.
         ^
SyntaxError: invalid syntax

running install_data
creating /home/jestin/SegFaultExp/A3/pathfinder/install/drive/share/ament_index
creating /home/jestin/SegFaultExp/A3/pathfinder/install/drive/share/ament_index/resource_index
creating /home/jestin/SegFaultExp/A3/pathfinder/install/drive/share/ament_index/resource_index/packages
copying resource/drive -> /home/jestin/SegFaultExp/A3/pathfinder/install/drive/share/ament_index/resource_index/packages
copying package.xml -> /home/jestin/SegFaultExp/A3/pathfinder/install/drive/share/drive
running install_egg_info
Copying ../../build/drive/drive.egg-info to /home/jestin/SegFaultExp/A3/pathfinder/install/drive/lib/python3.10/site-packages/drive-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/jestin/SegFaultExp/A3/pathfinder/build/drive/install.log'
